Address some typos with the selector branch

--- a/html/index.html
+++ b/html/index.html
@@ -85,7 +85,7 @@
   <h3>Does the lever cap have a recessed back?</h3>
   <p><ul>
   <li><a href="#tool_step_1_0_0_0_0">No</a></li>
-  <li><a href="#tool_step_1_0_0_1_1">Yes</a></li>
+  <li><a href="#tool_step_1_0_0_0_1">Yes</a></li>
   </ul></p>
  </article>
  <article id="tool_step_1_0_0_0_0">
@@ -108,10 +108,10 @@
   <h1>No Patent Date On Bed and No Raised Ring and Model Cast On Bed.</h1>
   <h3>How Many Patent Dates on Lateral Adjustment Lever?</h3>
   <p><ul>
-  <li><a href="#tool_step_1_0_0_0_0_0">0 Zero</a></li>
+  <li><a href="#tool_step_1_0_0_1_0">0 Zero</a></li>
   <li><a href="#type_8">1 One</a></li>
   <li><a href="#type_5">2 Two</a></li>
-  <li><a href="#tool_step_1_0_0_1_0_3">3 Three</a></li>
+  <li><a href="#tool_step_1_0_0_1_3">3 Three</a></li>
   </ul></p>
  </article>
  <article id="tool_step_1_0_0_1_0">
