Add todo, and remove redundant step from selector

--- a/html/index.html
+++ b/html/index.html
@@ -32,16 +32,7 @@
  </nav>
  <div id="articles">
  <article id="tool">
-  <h1>About</h1>
-  <h3>Click though identification made easy.</h3>
-  <p>Based on various worksheets, hard to find books, and more I wanted to make a simple source of info.
-  <ul>
-  <li><a href="#tool_step_1">Start</a></li>
-  </ul>
-  </p>
- </article>
- <article id="tool_step_1">
-  <h1>Tool Step 1</h1>
+  <h1>Identification Step 1</h1>
   <h3>Number of Patent Dates on Bed?</h3>
   <p>
   <ul>
@@ -658,7 +649,7 @@
   </p>
   <p>Resources and Credits:
   <ul>
-  <li>The Stanley Plane by Alvin Sellens 1975 Published by The Early American Industries Association</li>
+  <li>The Stanley Plane by Alvin Sellens 1975 Published by The Early American Industries Association ISBN 10: 0961206802 / ISBN 13: 9780961206802</li>
   </ul>
   </p>
  </article>
