add diagram to aid with identification

--- a/html/index.html
+++ b/html/index.html
@@ -644,9 +644,7 @@
  </article>
  <article id="home">
   <h1>Stanley Hand Plane Information and Identification</h1>
-  <h3>Welcome</h3>
-  <p>Do you need or want more information about Stanley hand planes? You are in the right place.
-  </p>
+  <p>Do you need or want more information about Stanley hand planes? You are in the right place.</p><img src="images/plane.png" />
   <p>Resources and Credits:
   <ul>
   <li>The Stanley Plane by Alvin Sellens 1975 Published by The Early American Industries Association ISBN 10: 0961206802 / ISBN 13: 9780961206802</li>
