--- a/html/index.html
+++ b/html/index.html
@@ -40,6 +40,7 @@
    <li><a href="#tool_step_1_2">2 Two</a></li>
    <li><a href="#tool_step_1_3">3 Three</a></li>
   </ul></p>
+  <img src="images/patentdates.png" />
  </article>
  <article id="tool_step_1_0">
   <h1>Zero Patent Dates On Bed</h1>
@@ -48,6 +49,7 @@
    <li><a href="#tool_step_1_0_0">No</a></li>
    <li><a href="#tool_step_1_0_1">Yes</a></li>
   </ul></p>
+  <img src="images/ring.png" />
  </article>
  <article id="tool_step_1_0_1">
   <h1>No Patent Date On Bed and Raised Ring</h1>
@@ -67,6 +69,7 @@
    <li><a href="#tool_step_1_0_0_0">No</a></li>
    <li><a href="#tool_step_1_0_0_1">Yes</a></li>
   </ul></p>
+  <img src="images/number.png" />
  </article>
  <article id="tool_step_1_0_0_0">
   <h1>No Patent Date On Bed and No Raised Ring and No Model Cast On Bed.</h1>
@@ -75,6 +78,7 @@
    <li><a href="#tool_step_1_0_0_0_0">No</a></li>
    <li><a href="#tool_step_1_0_0_0_1">Yes</a></li>
   </ul></p>
+  <img src="images/recessed.png" />
  </article>
  <article id="tool_step_1_0_0_0_0">
   <h1>No Patent Date On Bed and No Raised Ring and No Model Cast On Bed and No Recessed Lever Cap.</h1>
@@ -86,11 +90,12 @@
  </article>
  <article id="tool_step_1_0_0_0_1">
   <h1>No Patent Date On Bed and No Raised Ring and No Model Cast On Bed and Recessed Lever Cap.</h1>
-  <h3>Arched rear of flat frog reciver?</h3>
+  <h3>Arched rear of frog reciver?</h3>
   <p><ul>
    <li><a href="#type_3">No</a></li>
    <li><a href="#type_4">Yes</a></li>
   </ul></p>
+  <img src="images/arched.png" />
  </article>
  <article id="tool_step_1_0_0_1">
   <h1>No Patent Date On Bed and No Raised Ring and Model Cast On Bed.</h1>
@@ -109,6 +114,7 @@
    <li><a href="#type_5">No</a></li>
    <li>Yes could be <a href="#type_8">Type 8</a> or <a href="#type_9">Type 9</a></li>
   </ul></p>
+  <img src="images/lateralleverstanley.png" />
  </article>
  <article id="tool_step_1_0_0_1_3">
   <h1>No Patent Date On Bed and No Raised Ring and Model Cast On Bed and No Patent Dates On Lateral Adjustment Lever.</h1>
@@ -125,6 +131,7 @@
    <li><a href="#type_13">No</a></li>
    <li><a href="#type_14">Yes</a></li>
   </ul></p>
+  <img src="images/ring.png" />
  </article>
  <article id="tool_step_1_2">
   <h1>Two Patent Dates On Bed</h1>
@@ -217,7 +224,6 @@
   <h1>Stanley No. 3 Hand Plane</h1>
   <p><ul>
    <li>1870 - 1973</li>
-   <li>Corrugated 1898 - 1972</li>
    <li>Smoothing Plane</li>
    <li>Length: 8 inches</li>
    <li>Width of cutter: 1-3/4 inches</li>
@@ -278,7 +284,6 @@
   <h1>Stanley No. 6 Hand Plane</h1>
   <p><ul>
    <li>1870 - 1973</li>
-   <li>Corrugated 1898 - 1973</li>
    <li>Fore Plane</li>
    <li>Length: 18 inches</li>
    <li>Width of cutter: 2-3/8 inches</li>
