--- a/html/index.html
+++ b/html/index.html
@@ -56,7 +56,7 @@
   <p><ul>
    <li><a href="#type_20">Bed painted Blue.</a></li>
    <li><a href="#type_15">Toe and Heel have raised casting.</a></li>
-   <li><a href="#type_19">Stanely PRINTED on lateral adjustment lever.</a></li>
+   <li><a href="#type_19">Stanley PRINTED on lateral adjustment lever.</a></li>
    <li><a href="#type_18">Depth Adjustment knurling diagonal.</a></li>
    <li><a href="#type_17">Wartime features like red or black painted tote and knob, steel or hard rubber depth adjustment heavier bottom casting.</a></li>
    <li><a href="#type_16">None of the above.</a></li>
@@ -229,6 +229,7 @@
    <li>Width of cutter: 1-3/4 inches</li>
    <li>Weight: 3-1/8 LBs</li>
   </ul></p>
+  <img src="images/no3boxlabel.png" alt="Stanley No. 3 Box Label">
  </article>
  <article id="model_4">
   <h1>Stanley No. 4 Hand Plane</h1>
