image title text for onhover

--- a/html/index.html
+++ b/html/index.html
@@ -40,7 +40,7 @@
    <li><a href="#tool_step_1_2">2 Two</a></li>
    <li><a href="#tool_step_1_3">3 Three</a></li>
   </ul></p>
-  <img src="images/patentdates.png" />
+  <img src="images/patentdates.png" title="Three patent dates on bed." />
  </article>
  <article id="tool_step_1_0">
   <h1>Zero Patent Dates On Bed</h1>
@@ -49,7 +49,7 @@
    <li><a href="#tool_step_1_0_0">No</a></li>
    <li><a href="#tool_step_1_0_1">Yes</a></li>
   </ul></p>
-  <img src="images/ring.png" />
+  <img src="images/ring.png" title="Ring on bed for supporting knob." />
  </article>
  <article id="tool_step_1_0_1">
   <h1>No Patent Date On Bed and Raised Ring</h1>
@@ -69,7 +69,7 @@
    <li><a href="#tool_step_1_0_0_0">No</a></li>
    <li><a href="#tool_step_1_0_0_1">Yes</a></li>
   </ul></p>
-  <img src="images/number.png" />
+  <img src="images/number.png" title="Model number printed on bed." />
  </article>
  <article id="tool_step_1_0_0_0">
   <h1>No Patent Date On Bed and No Raised Ring and No Model Cast On Bed.</h1>
@@ -78,7 +78,7 @@
    <li><a href="#tool_step_1_0_0_0_0">No</a></li>
    <li><a href="#tool_step_1_0_0_0_1">Yes</a></li>
   </ul></p>
-  <img src="images/recessed.png" />
+  <img src="images/recessed.png" title="Cap recessed in back."/>
  </article>
  <article id="tool_step_1_0_0_0_0">
   <h1>No Patent Date On Bed and No Raised Ring and No Model Cast On Bed and No Recessed Lever Cap.</h1>
@@ -95,7 +95,7 @@
    <li><a href="#type_3">No</a></li>
    <li><a href="#type_4">Yes</a></li>
   </ul></p>
-  <img src="images/arched.png" />
+  <img src="images/arched.png" title="Frog reciver arched back." />
  </article>
  <article id="tool_step_1_0_0_1">
   <h1>No Patent Date On Bed and No Raised Ring and Model Cast On Bed.</h1>
@@ -114,7 +114,7 @@
    <li><a href="#type_5">No</a></li>
    <li>Yes could be <a href="#type_8">Type 8</a> or <a href="#type_9">Type 9</a></li>
   </ul></p>
-  <img src="images/lateralleverstanley.png" />
+  <img src="images/lateralleverstanley.png" title="Stanley stamped into lateral adjustment lever." />
  </article>
  <article id="tool_step_1_0_0_1_3">
   <h1>No Patent Date On Bed and No Raised Ring and Model Cast On Bed and No Patent Dates On Lateral Adjustment Lever.</h1>
@@ -131,7 +131,7 @@
    <li><a href="#type_13">No</a></li>
    <li><a href="#type_14">Yes</a></li>
   </ul></p>
-  <img src="images/ring.png" />
+  <img src="images/ring.png" title="Ring on bed for supporting knob." />
  </article>
  <article id="tool_step_1_2">
   <h1>Two Patent Dates On Bed</h1>
@@ -229,7 +229,7 @@
    <li>Width of cutter: 1-3/4 inches</li>
    <li>Weight: 3-1/8 LBs</li>
   </ul></p>
-  <img src="images/no3boxlabel.png" alt="Stanley No. 3 Box Label">
+  <img src="images/no3boxlabel.png" title="Stanley No. 3 Box Label" />
  </article>
  <article id="model_4">
   <h1>Stanley No. 4 Hand Plane</h1>
@@ -589,7 +589,7 @@
  </article>
  <article id="home">
   <h1>Stanley Hand Plane Information and Identification</h1>
-  <p>Do you need or want more information about Stanley hand planes? You are in the right place.</p><img src="images/plane.png" />
+  <p>Do you need or want more information about Stanley hand planes? You are in the right place.</p><img src="images/plane.png" title="Diagram of plane parts." />
   <p>Resources and Credits:<ul>
    <li>The Stanley Plane by Alvin Sellens 1975 Published by The Early American Industries Association ISBN 10: 0961206802 / ISBN 13: 9780961206802</li>
    <li>Stanley Tools Education Department Chart No. C115</li>
