Add FAQ and cleanups including spelling

--- a/html/index.html
+++ b/html/index.html
@@ -9,6 +9,7 @@
   nav { display: none; position: fixed; top: 0px; left: 0px; width: 100%; background-color: #333; color: #FFF; }
   nav a { display: block; padding: 10px 20px; text-decoration: none; text-align: center; color: #FFF; }
   nav a:hover { background-color: #111; } nav:target { display: block !important; }
+  dl,dt,dd {padding: .3em;}
   #articles > article:target ~ article:last-child, #articles > article { display: none; margin: 20px; padding: 20px; background-color: #aaa; }
   #articles > :last-child, #articles > article:target { display: block; }
   footer { background-color: #333; position: fixed; bottom: 0px; left: 0px; width: 100%; padding: 10px; color: #FFF;}
@@ -29,6 +30,7 @@
   <a href="#tool">Identification Tool</a>
   <a href="#types">Types</a>
   <a href="#models">Models</a>
+  <a href="#faq">FAQ</a>
  </nav>
  <div id="articles">
  <article id="tool">
@@ -64,7 +66,7 @@
  </article>
  <article id="tool_step_1_0_0">
   <h1>No Patent Date On Bed and No Raised Ring</h1>
-  <h3>Is the Model cast into the bed? eg. No. 5</h3>
+  <h3>Is the Model cast into the bed? e.g. No. 5</h3>
   <p><ul>
    <li><a href="#tool_step_1_0_0_0">No</a></li>
    <li><a href="#tool_step_1_0_0_1">Yes</a></li>
@@ -90,7 +92,7 @@
  </article>
  <article id="tool_step_1_0_0_0_1">
   <h1>No Patent Date On Bed and No Raised Ring and No Model Cast On Bed and Recessed Lever Cap.</h1>
-  <h3>Arched rear of frog reciver?</h3>
+  <h3>Arched rear of frog receiver?</h3>
   <p><ul>
    <li><a href="#type_3">No</a></li>
    <li><a href="#type_4">Yes</a></li>
@@ -530,7 +532,7 @@
   <h1>Type 14</h1>
   <h3>1929 - 1930</h3>
   <p><ul>
-   <li>“Made in USA” on bed appers</li>
+   <li>“Made in USA” on bed appears</li>
    <li>Sweetheart</li>
    <li>Lateral adjustment lever</li>
    <li>1922 introduced the taller front knob</li>
@@ -587,14 +589,56 @@
   <h3>1968 - 19??</h3>
   <p>Red Paint</p>
  </article>
+ <article id="faq">
+  <h1>Frequently Asked Questions (FAQ)</h1>
+  <dl>
+   <dt>Plane says Bailey not Stanley, is this a Stanley plane?</dt>
+   <dd>Yes, Bailey is a reference to the style and creator of the design.</dd>
+   <dd>Stanley name was added to the lateral adjustment lever and later the cap.</dd>
+   <dd>It is strange it was never added to the bed.</dd>
+   <dt>The threads on some of the plane parts are strange, how do I repair them?</dt>
+   <dd>Some threads are Whitworth style with a slightly different size and degree of thread.</dd>
+   <dd>Look for BSW or Whitworth Tap and Dies.</dd>
+   <dd><a href="https://en.wikipedia.org/wiki/British_Standard_Whitworth" target="new">British Standard Whitworth Wikipedia page.</a></dd>
+   <dd>For better or worse, Whitworth was the first "Standardized" thread adopted by industries.</dd>
+   <dt>Attempting to identify a plane and nothing matches up, what is wrong?</dt>
+   <dd>It is possible that parts have been swapped or replaced over the past century.</dd>
+   <dt>What wood is the tote and knob handles made of?</dt>
+   <dd>It can vary but Rosewood is the most common. From Brazil or India.</dd>
+   <dd>Rosewood was/is over-harvested and difficult to get these days.</dd>
+   <dt>What Types(series) of Stanley plane is the most useful for woodworking?</dt>
+   <dd>Books mention that type 12 and up are most useful.</dd>
+   <dd>Anything with the lateral adjustment lever will work well.</dd>
+   <dt>What is Japanning on a Stanley plane?</dt>
+   <dd>Japanning is a method of painting where a finish is also heated to cure for a durable finish.</dd>
+   <dd>Modern paints can mimic the finish. Collectors want original Japanning.</dd>
+   <dd><a href="https://en.wikipedia.org/wiki/Japanning" target="new">Japanning Wikipedia Page</a></dd>
+   <dt>Where can I find new blades for my plane?</dt>
+   <dd>Stanley irons/blades can be found. Often as new old stock.</dd>
+   <dd>Hock is a modern brand for plane irons.</dd>
+   <dd>Remember to search for irons, and blades.</dd>
+   <dd>I have bought damaged or incomplete planes just for the quality irons in them.</dd>
+   <dd>Wood body planes and transitional planes can be found with quality original irons.</dd>
+   <dt>Why are there corrugated bottom planes?</dt>
+   <dd>There are situations where the corrugated bottom offered less resistance on the wood.</dd>
+   <dd>Depends on the wood and the task.</dd>
+   <dt>Is a Jack plane a scrub plane?</dt>
+   <dd>It can be. Scrub planes are about the shape of the iron/blade.</dd>
+   <dd>Typically sharpened with a radius to remove more wood in the center.</dd>
+   <dt>Why are hand planes still in use today?</dt>
+   <dd>Control and finish quality. A good sharp plane or scraper does not require sanding.</dd>
+   <dd>Quiet and safety are also great reasons. No hearing protection needed.</dd>
+  </dl>
+ </article>
  <article id="home">
   <h1>Stanley Hand Plane Information and Identification</h1>
   <p>Do you need or want more information about Stanley hand planes? You are in the right place.</p><img src="images/plane.png" title="Diagram of plane parts." />
   <p>Resources and Credits:<ul>
    <li>The Stanley Plane by Alvin Sellens 1975 Published by The Early American Industries Association ISBN 10: 0961206802 / ISBN 13: 9780961206802</li>
    <li>Stanley Tools Education Department Chart No. C115</li>
+   <li>My extensive collection of vintage tools.</li>
   </ul></p>
  </article>
  </div>
- <footer>Copyleft You! <a href="https://github.com/lathama/Stanley_Plane_Identification">Source Code</a></footer>
+ <footer>Copyleft You! <a href="https://github.com/lathama/Stanley_Plane_Identification" target="new">Source Code</a></footer>
 </body></html>
