Work on moblie rendering and font sizes

--- a/html/index.html
+++ b/html/index.html
@@ -4,16 +4,18 @@
  <title>Stanley Plane Identification</title>
  <style>
   html { line-height: 150%; margin: 0px; font-size:100%; }
-  body { background-color: #888; padding-top: 50px; padding-bottom: 50px; font-size:1.5em;}
+  body { background-color: #eee; padding-top: 50px; padding-bottom: 50px; font-size:1.5em;}
+  h1,h2 { line-height: 150%;}
   #menubutton { padding: 10px; position: fixed; top: 0px; left: 0px; width: 100%; background-color: #333; color: #FFF; text-decoration: none; text-align: center; }
   nav { display: none; position: fixed; top: 0px; left: 0px; width: 100%; background-color: #333; color: #FFF; }
-  nav a { display: block; padding: 10px 20px; text-decoration: none; text-align: center; color: #FFF; }
+  nav a { display: block; padding: 7px 14px; text-decoration: none; text-align: center; color: #FFF; }
   nav a:hover { background-color: #111; } nav:target { display: block !important; }
   dl,dt,dd {padding: .3em;}
-  #articles > article:target ~ article:last-child, #articles > article { display: none; margin: 20px; padding: 20px; background-color: #aaa; }
+  #articles > article:target ~ article:last-child, #articles > article { display: none; margin: 20px; padding: 10px; background-color: #aaa; }
   #articles > :last-child, #articles > article:target { display: block; }
-  footer { background-color: #333; position: fixed; bottom: 0px; left: 0px; width: 100%; padding: 10px; color: #FFF;}
+  footer { background-color: #333; position: fixed; bottom: 0px; left: 0px; width: 100%; padding: 5px; color: #FFF;}
   footer a { text-decoration: none; color: #FFF; }
+  img { max-width: 80%; height: auto; }
   @media only screen and (min-width: 768px)
   {
    #menubutton { display: none; }
