detailed type notes and spelling updates

--- a/html/index.html
+++ b/html/index.html
@@ -100,7 +100,7 @@
    <li><a href="#type_3">No</a></li>
    <li><a href="#type_4">Yes</a></li>
   </ul></p>
-  <a href="images/arched.png" target="new"><img src="images/arched.png" title="Frog reciver arched back." /></a>
+  <a href="images/arched.png" target="new"><img src="images/arched.png" title="Frog receiver arched back." /></a>
  </article>
  <article id="tool_step_1_0_0_1">
   <h2>No Patent Date On Bed and No Raised Ring and Model Cast On Bed.</h2>
@@ -204,7 +204,10 @@
    <li><a href="#model_6c">Model 6 C</a></li>
    <li><a href="#model_7c">Model 7 C</a></li>
    <li><a href="#model_8c">Model 8 C</a></li>
-  </ul></p>
+  </ul>
+
+  <h3>TODO Bedrock Planes</h3>
+  </p>
  </article>
  <article id="model_1">
   <h2>Stanley No. 1 Hand Plane</h2>
@@ -449,79 +452,136 @@
   <h2>Type 1</h2>
   <h3>1867? - 1869</h3>
   <p><ul>
-   <li>Made in Boston USA.</li>
-   <li>Stanley bought Bailey in 1869.</li>
+   <li>Made in Boston USA by Leonard Bailey</li>
+   <li>Stanley bought Bailey in 1869</li>
+   <li>Short Front Knob (~2" Height) with a bead in the base</li>
+   <li>Depth knob solid brass or two piece with "BAILEY, WOODS & CO." "BOSTON" "PATENTED" "AUG. 31, 1858, AUG. 6, 1867" stamping</li>
+   <li>Depth knob has right hand threading</li>
+   <li>"L. BAILEY'S" "PATENT" "DEC. 24, 1867" stamping on iron and cap iron</li>
+   <li>Solid lever cap</li>
+   <li>Rounded frog back toward the tote</li>
+   <li>Model number likely found under lever cap and or under side of frog</li>
   </ul></p>
  </article>
  <article id="type_2">
   <h2>Type 2</h2>
   <h3>1869 - 1872</h3>
-  <p>Stanley bought Bailey in 1869</p>
+  <p><ul>
+   <li>Stanley bought Bailey in 1869.</li>
+   <li>Short Front Knob (~2" Height) with a bead in the base</li>
+   <li>Depth knob may lack the BAILEY stampings</li>
+   <li>Lever cap spring is rectangle shaped</li>
+   <li>Depth knob has right hand threading</li>
+  </ul></p>
  </article>
  <article id="type_3">
   <h2>Type 3</h2>
   <h3>1872 - 1873</h3>
-  <p></p>
+  <p><ul>
+   <li>Short Front Knob (~2" Height) with a bead in the base</li>
+   <li>Ribbed frog receiver design used</li>
+   <li>Recessed Lever Cap</li>
+   <li>Depth knob has right hand threading</li>
+  </ul></p>
  </article>
  <article id="type_4">
   <h2>Type 4</h2>
   <h3>1874 - 1884</h3>
-  <p></p>
+  <p><ul>
+   <li>Short Front Knob (~2" Height) with a bead in the base</li>
+   <li>Ribbed frog receiver removed</li>
+   <li>Depth knob has right hand threading</li>
+  </ul></p>
  </article>
  <article id="type_5">
   <h2>Type 5</h2>
   <h3>1885 - 1888</h3>
   <p><ul>
    <li>Lateral adjustment lever appears Patents 111890, 173177, 306877 and 386509</li>
+   <li>Lateral adjustment lever stamped with Stanley and dates 2-8-76 and 10-21-84</li>
+   <li>Lateral adjustment lever one piece</li>
+   <li>Model number cast into bed</li>
+   <li>Short Front Knob (~2" Height) with a bead in the base</li>
+   <li>Depth knob has right hand threading</li>
   </ul></p>
  </article>
  <article id="type_6">
   <h2>Type 6</h2>
   <h3>1888 - 1892</h3>
-  <p></p>
+  <p><ul>
+   <li>Short Front Knob (~2" Height)</li>
+   <li>Lateral adjustment lever with added disk to engage iron</li>
+   <li>Depth knob has left hand threading</li>
+   <li>Front knob bead removed</li>
+   <li>Grooves in frog receiver</li>
+  </ul></p>
  </article>
  <article id="type_7">
   <h2>Type 7</h2>
   <h3>1893 - 1899</h3>
-  <p></p>
+  <p><ul>
+   <li>Short Front Knob (~2" Height)</li>
+   <li>Lateral adjustment lever with added disk to engage iron</li>
+   <li>Depth knob has left hand threading</li>
+   <li>Absent Bailey stamping on depth adjustment knob</li>
+   <li>Model number casting change to space the No. from number</li>
+  </ul></p>
  </article>
  <article id="type_8">
   <h2>Type 8</h2>
   <h3>1899 - 1902</h3>
-  <p></p>
+  <p><ul>
+   <li>Short Front Knob (~2" Height)</li>
+   <li>Lateral adjustment lever has Stanley and 7-24-88 stamping</li>
+   <li>Lateral adjustment lever with added disk to engage iron</li>
+   <li>Depth knob has left hand threading</li>
+  </ul></p>
  </article>
  <article id="type_9">
   <h2>Type 9</h2>
   <h3>1902 - 1907</h3>
   <p><ul>
-   <li>“Bailey” appears on bed.</li>
-   <li>Two Patent Dates on bed</li>
-   <li>Has Lateral adjustment lever</li>
-   <li>Redesigned frog (two step)</li>
+   <li>“Bailey” appears on the toe of the bed</li>
+   <li>Two Patent Dates on bed MAR-25-02 and AUG-19-02</li>
+   <li>Lateral adjustment lever with added disk to engage iron</li>
+   <li>Lateral adjustment lever has no patent dates</li>
+   <li>Depth knob has left hand threading</li>
+   <li>Redesigned frog receiver with rib and a slotted frog</li>
+   <li>Short Front Knob (~2" Height)</li>
+   <li>Knob and tote brass nuts change. TODO get a photo</li>
   </ul></p>
  </article>
  <article id="type_10">
   <h2>Type 10</h2>
   <h3>1907 - 1909</h3>
-  <p>Two Patent Dates</p>
+  <p><ul>
+   <li>Two Patent Dates on bed MAR-25-02 and AUG-19-02</li>
+   <li>Short Front Knob (~2" Height)</li>
+   <li>Has Lateral adjustment lever</li>
+   <li>Frog adjustment screw appears</li>
+   <li>Enlarged rib on frog receiver</li>
+  </ul></p>
  </article>
  <article id="type_11">
   <h2>Type 11</h2>
   <h3>1910 - 1918</h3>
   <p><ul>
-   <li>Three Patent Dates</li>
+   <li>Three Patent Dates MAR-25-02, AUG-19-02 and APR-19-10</li>
    <li>Lateral adjustment lever</li>
    <li>Frog adjustment screw appears</li>
+   <li>Short Front Knob (~2" Height)</li>
   </ul></p>
  </article>
  <article id="type_12">
   <h2>Type 12</h2>
   <h3>1919 - 1924</h3>
   <p><ul>
-   <li>First of “Sweetheart” types.</li>
+   <li>First of “Sweetheart” types</li>
    <li>Three Patent Dates</li>
    <li>Lateral adjustment lever</li>
-   <li>1922 introduced the taller front knob</li>
+   <li>1922 introduced the taller front knob (~2-1/2" Height)</li>
+   <li>Depth adjustment knob changes to larger 1-1/4" size</li>
+   <li>Updated lever cap with 3/16" longer cam</li>
   </ul></p>
  </article>
  <article id="type_13">
@@ -530,8 +590,10 @@
   <p><ul>
    <li>Sweetheart Lateral adjustment lever</li>
    <li>“Stanley” appears on lever cap.</li>
-   <li>One Patent Date</li>
-   <li>1922 introduced the taller front knob</li>
+   <li>One Patent Date APR-19-10 on bed</li>
+   <li>Tall front knob (~2-1/2" Height)</li>
+   <li>Stanley cast into lever cap</li>
+   <li>Various lever cap finishing with nickel and painted logos during this time.</li>
   </ul></p>
  </article>
  <article id="type_14">
@@ -540,8 +602,10 @@
   <p><ul>
    <li>“Made in USA” on bed appears</li>
    <li>Sweetheart</li>
+   <li>“Stanley” on lever cap.</li>
    <li>Lateral adjustment lever</li>
-   <li>1922 introduced the taller front knob</li>
+   <li>Tall front knob (~2-1/2" Height)</li>
+   <li>Raised ring supporting front knob appears</li>
   </ul></p>
  </article>
  <article id="type_15">
@@ -549,9 +613,12 @@
   <h3>1931 - 1932</h3>
   <p><ul>
    <li>“Made in USA” on bed</li>
+   <li>“Stanley” on lever cap.</li>
    <li>Lateral adjustment lever</li>
    <li>Last of the Sweethearts</li>
-   <li>1922 introduced the taller front knob</li>
+   <li>Tall front knob (~2-1/2" Height)</li>
+   <li>Raised Ring for front knob</li>
+   <li>Model number now in front of the knob.</li>
   </ul></p>
  </article>
  <article id="type_16">
@@ -559,41 +626,75 @@
   <h3>1933 - 1941</h3>
   <p><ul>
    <li>“Made in USA” on bed</li>
+   <li>“Stanley” on lever cap.</li>
    <li>Kidney shaped lever cap hole. (Patent 1933)</li>
    <li>Lateral adjustment lever</li>
-   <li>Raised Ring for front knob added</li>
-   <li>1922 introduced the taller front knob</li>
+   <li>Raised Ring for front knob</li>
+   <li>Tall front knob (~2-1/2" Height)</li>
+   <li>Raised casting at toe and heel</li>
   </ul></p>
  </article>
  <article id="type_17">
   <h2>Type 17</h2>
   <h3>1942 - 1945</h3>
   <p><ul>
-   <li>War production</li>
+   <li>War production, wide variety of changes and variations</li>
+   <li>“Stanley” on lever cap.</li>
+   <li>With or without the kidney shaped lever cap hole</li>
    <li>Often without frog adjust</li>
    <li>Steel or hard rubber adjustment nut</li>
-   <li>1922 introduced the taller front knob</li>
+   <li>Tall front knob (~2-1/2" Height)</li>
+   <li>Knob and tote could be painted black, red or not at all</li>
+   <li>One piece bolt for holding tote</li>
+   <li>Models may lack the frog adjustment screw</li>
   </ul></p>
  </article>
  <article id="type_18">
   <h2>Type 18</h2>
   <h3>1946 - 1947</h3>
-  <p></p>
+  <p><ul>
+   <li>“Stanley” on lever cap.</li>
+   <li>Kidney shaped lever cap hole. (Patent 1933)</li>
+   <li>Tall front knob (~2-1/2" Height)</li>
+   <li>Brass adjustment knob back, diagonal knurling</li>
+   <li>Knob and tote possibly painted black</li>
+  </ul></p>
  </article>
  <article id="type_19">
   <h2>Type 19</h2>
   <h3>1948 - 1961</h3>
-  <p></p>
+  <p><ul>
+   <li>“Stanley” on lever cap.</li>
+   <li>Kidney shaped lever cap hole. (Patent 1933)</li>
+   <li>Tall front knob (~2-1/2" Height)</li>
+   <li>Brass adjustment knob has parallel knurling</li>
+   <li>Knob and tote possibly painted black</li>
+   <li>Y Adjusting lever could be nickel plated</li>
+  </ul></p>
  </article>
  <article id="type_20">
   <h2>Type 20</h2>
   <h3>1962 - 1967</h3>
-  <p>Blue Paint</p>
+  <p><ul>
+   <li>“Stanley” on lever cap.</li>
+   <li>Kidney shaped lever cap hole. (Patent 1933)</li>
+   <li>Blue Paint on bed</li>
+   <li>Tall front knob (~2-1/2" Height)</li>
+   <li>Lateral adjustment lever one piece</li>
+  </ul>
+  </p>
  </article>
  <article id="type_21">
   <h2>Type 20</h2>
   <h3>1968 - 19??</h3>
-  <p>Red Paint</p>
+  <p><ul>
+   <li>Most books and resources stop at 1968 but I am noting some things as a type 21</li>
+   <li>“Stanley” on lever cap.</li>
+   <li>Kidney shaped lever cap hole. (Patent 1933)</li>
+   <li>Red Paint on bed</li>
+   <li>Tall front knob (~2-1/2" Height)</li>
+   <li>Cost savings on many parts</li>
+  </ul></p>
  </article>
  <article id="patents">
   <h2>Patents</h2>
@@ -675,7 +776,9 @@
    <li>The Stanley Plane by Alvin Sellens 1975 Published by The Early American Industries Association ISBN 10: 0961206802 / ISBN 13: 9780961206802</li>
    <li>Stanley Tools Education Department Chart No. C115</li>
    <li>My extensive collection of vintage tools.</li>
-   <li><a href="https://ppubs.uspto.gov/pubwebapp/static/pages/ppubsbasic.html">United States Patent and Trademark Office</a></li>
+   <li><a href="https://ppubs.uspto.gov/pubwebapp/static/pages/ppubsbasic.html" target="new">United States Patent and Trademark Office</a></li>
+   <li>Patented Transitional Metallic Planes America by Roger Smith ISBN 10: 0940458004 / ISBN 13: 9780940458000 and Vol II ISBN 10: 0940458055 / ISBN 13: 9780940458055</li>
+   <li>https://www.plane-dealer.com/bailey-type-study</li>
   </ul></p>
  </article>
  </div>
