More work, add notes for other makers, clean up char encoding

--- a/html/index.html
+++ b/html/index.html
@@ -33,11 +33,12 @@
   <a href="#types">Types</a>
   <a href="#models">Models</a>
   <a href="#patents">Patents</a>
+  <a href="#competitors">Competitors</a>
   <a href="#faq">FAQ</a>
  </nav>
  <div id="articles">
  <article id="tool">
-  <h2>Identification Step 1</h2>
+  <h2>Stanley Bench Plane Identification</h2>
   <h3>Number of Patent Dates on Bed?</h3>
   <p><ul>
    <li><a href="#tool_step_1_0">0 Zero or None</a></li>
@@ -48,7 +49,7 @@
   <a href="images/patentdates.png" target="new"><img src="images/patentdates.png" title="Three patent dates on bed." /></a>
  </article>
  <article id="tool_step_1_0">
-  <h2>Zero Patent Dates On Bed</h2>
+  <h2>Zero Patent Dates on Bed</h2>
   <h3>Is there a raised ring under the knob?</h3>
   <p><ul>
    <li><a href="#tool_step_1_0_0">No</a></li>
@@ -57,7 +58,7 @@
   <a href="images/ring.png" target="new"><img src="images/ring.png" title="Ring on bed for supporting knob." /></a>
  </article>
  <article id="tool_step_1_0_1">
-  <h2>No Patent Date On Bed and Raised Ring</h2>
+  <h2>No Patent Date on Bed and Raised Ring</h2>
   <p><ul>
    <li><a href="#type_20">Bed painted Blue.</a></li>
    <li><a href="#type_15">Toe and Heel have raised casting.</a></li>
@@ -68,7 +69,7 @@
   </ul></p>
  </article>
  <article id="tool_step_1_0_0">
-  <h2>No Patent Date On Bed and No Raised Ring</h2>
+  <h2>No Patent Date on Bed and No Raised Ring</h2>
   <h3>Is the Model cast into the bed? e.g. No. 5</h3>
   <p><ul>
    <li><a href="#tool_step_1_0_0_0">No</a></li>
@@ -77,7 +78,7 @@
   <a href="images/number.png" target="new"><img src="images/number.png" title="Model number printed on bed." /></a>
  </article>
  <article id="tool_step_1_0_0_0">
-  <h2>No Patent Date On Bed and No Raised Ring and No Model Cast On Bed.</h2>
+  <h2>No Patent Date on Bed and No Raised Ring and No Model Cast On Bed</h2>
   <h3>Does the lever cap have a recessed back?</h3>
   <p><ul>
    <li><a href="#tool_step_1_0_0_0_0">No</a></li>
@@ -86,7 +87,7 @@
   <a href="images/recessed.png" target="new"><img src="images/recessed.png" title="Cap recessed in back."/></a>
  </article>
  <article id="tool_step_1_0_0_0_0">
-  <h2>No Patent Date On Bed and No Raised Ring and No Model Cast On Bed and No Recessed Lever Cap.</h2>
+  <h2>No Patent Date on Bed and No Raised Ring and No Model Cast On Bed and No Recessed Lever Cap</h2>
   <h3>Depth Adjustment nut stamped 'Bailey's Patent'?</h3>
   <p><ul>
    <li><a href="#type_1">No</a></li>
@@ -94,7 +95,7 @@
   </ul></p>
  </article>
  <article id="tool_step_1_0_0_0_1">
-  <h2>No Patent Date On Bed and No Raised Ring and No Model Cast On Bed and Recessed Lever Cap.</h2>
+  <h2>No Patent Date on Bed and No Raised Ring and No Model Cast on Bed and Recessed Lever Cap.</h2>
   <h3>Arched rear of frog receiver?</h3>
   <p><ul>
    <li><a href="#type_3">No</a></li>
@@ -103,7 +104,7 @@
   <a href="images/arched.png" target="new"><img src="images/arched.png" title="Frog receiver arched back." /></a>
  </article>
  <article id="tool_step_1_0_0_1">
-  <h2>No Patent Date On Bed and No Raised Ring and Model Cast On Bed.</h2>
+  <h2>No Patent Date on Bed and No Raised Ring and Model Cast on Bed.</h2>
   <h3>How Many Patent Dates on Lateral Adjustment Lever?</h3>
   <p><ul>
    <li><a href="#tool_step_1_0_0_1_0">0 Zero</a></li>
@@ -113,7 +114,7 @@
   </ul></p>
  </article>
  <article id="tool_step_1_0_0_1_0">
-  <h2>No Patent Date On Bed and No Raised Ring and Model Cast On Bed and No Patent Dates On Lateral Adjustment Lever.</h2>
+  <h2>No Patent Date on Bed and No Raised Ring and Model Cast on Bed and No Patent Dates on Lateral Adjustment Lever.</h2>
   <h3>Stanley stamped into the lateral adjustment Lever?</h3>
   <p><ul>
    <li><a href="#type_5">No</a></li>
@@ -122,7 +123,7 @@
   <a href="images/lateralleverstanley.png" target="new"><img src="images/lateralleverstanley.png" title="Stanley stamped into lateral adjustment lever." /></a>
  </article>
  <article id="tool_step_1_0_0_1_3">
-  <h2>No Patent Date On Bed and No Raised Ring and Model Cast On Bed and No Patent Dates On Lateral Adjustment Lever.</h2>
+  <h2>No Patent Date on Bed and No Raised Ring and Model Cast on Bed and No Patent Dates on Lateral Adjustment Lever.</h2>
   <h3>Depth Adjustment nut stamped 'Bailey's Patent'?</h3>
   <p><ul>
    <li><a href="#type_7">No</a></li>
@@ -130,7 +131,7 @@
   </ul></p>
  </article>
  <article id="tool_step_1_1">
-  <h2>One Patent Date On Bed</h2>
+  <h2>One Patent Date on Bed</h2>
   <h3>Is there a raised ring under the knob?</h3>
   <p><ul>
    <li><a href="#type_13">No</a></li>
@@ -139,7 +140,7 @@
   <a href="images/ring.png" target="new"><img src="images/ring.png" title="Ring on bed for supporting knob." /></a>
  </article>
  <article id="tool_step_1_2">
-  <h2>Two Patent Dates On Bed</h2>
+  <h2>Two Patent Dates on Bed</h2>
   <h3>Is the frog rib large and arched?</h3>
   <p><ul>
    <li><a href="#type_9">No</a></li>
@@ -147,7 +148,7 @@
   </ul></p>
  </article>
  <article id="tool_step_1_3">
-  <h2>Three Patent Dates On Bed</h2>
+  <h2>Three Patent Dates on Bed</h2>
   <h3>What size depth adjustment knob is there?</h3>
   <p><ul>
    <li><a href="#type_12">Large 1.25 Inches</a></li>
@@ -177,7 +178,7 @@
    <dd>Stanley (branded packaging) planes could have been built in late 1869.</dd>
   </dl>
 
-  <h3>Smooth Bottom</h3>
+  <h3>Smooth Bottom Bench Plane</h3>
   <ul>
    <li><a href="#model_1">Model 1</a></li>
    <li><a href="#model_2">Model 2</a></li>
@@ -192,7 +193,7 @@
    <li><a href="#model_8">Model 8</a></li>
   </ul>
 
-  <h3>Corrugated</h3>
+  <h3>Corrugated Bench Plane</h3>
   <ul>
    <li><a href="#model_2c">Model 2 C</a></li>
    <li><a href="#model_3c">Model 3 C</a></li>
@@ -423,8 +424,9 @@
   </ul></p>
  </article>
  <article id="types">
-  <h3>Stanley Hand Plane Types</h3>
-  <p><ul>
+  <h3>Stanley Bench Plane Types</h3>
+  <p>In the context of Stanley bench planes type describes a version or release made for a limited date range. You may wish to think of it as the date of the plane.
+  <ul>
    <li><a href="#type_1">Type 1</a></li>
    <li><a href="#type_2">Type 2</a></li>
    <li><a href="#type_3">Type 3</a></li>
@@ -541,7 +543,7 @@
   <h2>Type 9</h2>
   <h3>1902 - 1907</h3>
   <p><ul>
-   <li>“Bailey” appears on the toe of the bed</li>
+   <li>"Bailey" appears on the toe of the bed</li>
    <li>Two Patent Dates on bed MAR-25-02 and AUG-19-02</li>
    <li>Lateral adjustment lever with added disk to engage iron</li>
    <li>Lateral adjustment lever has no patent dates</li>
@@ -576,7 +578,7 @@
   <h2>Type 12</h2>
   <h3>1919 - 1924</h3>
   <p><ul>
-   <li>First of “Sweetheart” types</li>
+   <li>First of "Sweetheart" types</li>
    <li>Three Patent Dates</li>
    <li>Lateral adjustment lever</li>
    <li>1922 introduced the taller front knob (~2-1/2" Height)</li>
@@ -589,7 +591,7 @@
   <h3>1925 - 1928</h3>
   <p><ul>
    <li>Sweetheart Lateral adjustment lever</li>
-   <li>“Stanley” appears on lever cap.</li>
+   <li>"Stanley" appears on lever cap.</li>
    <li>One Patent Date APR-19-10 on bed</li>
    <li>Tall front knob (~2-1/2" Height)</li>
    <li>Stanley cast into lever cap</li>
@@ -600,9 +602,9 @@
   <h2>Type 14</h2>
   <h3>1929 - 1930</h3>
   <p><ul>
-   <li>“Made in USA” on bed appears</li>
+   <li>"Made in USA" on bed appears</li>
    <li>Sweetheart</li>
-   <li>“Stanley” on lever cap.</li>
+   <li>"Stanley" on lever cap.</li>
    <li>Lateral adjustment lever</li>
    <li>Tall front knob (~2-1/2" Height)</li>
    <li>Raised ring supporting front knob appears</li>
@@ -612,8 +614,8 @@
   <h2>Type 15</h2>
   <h3>1931 - 1932</h3>
   <p><ul>
-   <li>“Made in USA” on bed</li>
-   <li>“Stanley” on lever cap.</li>
+   <li>"Made in USA" on bed</li>
+   <li>"Stanley" on lever cap.</li>
    <li>Lateral adjustment lever</li>
    <li>Last of the Sweethearts</li>
    <li>Tall front knob (~2-1/2" Height)</li>
@@ -625,8 +627,8 @@
   <h2>Type 16</h2>
   <h3>1933 - 1941</h3>
   <p><ul>
-   <li>“Made in USA” on bed</li>
-   <li>“Stanley” on lever cap.</li>
+   <li>"Made in USA" on bed</li>
+   <li>"Stanley" on lever cap.</li>
    <li>Kidney shaped lever cap hole. (Patent 1933)</li>
    <li>Lateral adjustment lever</li>
    <li>Raised Ring for front knob</li>
@@ -639,7 +641,7 @@
   <h3>1942 - 1945</h3>
   <p><ul>
    <li>War production, wide variety of changes and variations</li>
-   <li>“Stanley” on lever cap.</li>
+   <li>"Stanley" on lever cap.</li>
    <li>With or without the kidney shaped lever cap hole</li>
    <li>Often without frog adjust</li>
    <li>Steel or hard rubber adjustment nut</li>
@@ -653,7 +655,7 @@
   <h2>Type 18</h2>
   <h3>1946 - 1947</h3>
   <p><ul>
-   <li>“Stanley” on lever cap.</li>
+   <li>"Stanley" on lever cap.</li>
    <li>Kidney shaped lever cap hole. (Patent 1933)</li>
    <li>Tall front knob (~2-1/2" Height)</li>
    <li>Brass adjustment knob back, diagonal knurling</li>
@@ -664,7 +666,7 @@
   <h2>Type 19</h2>
   <h3>1948 - 1961</h3>
   <p><ul>
-   <li>“Stanley” on lever cap.</li>
+   <li>"Stanley" on lever cap.</li>
    <li>Kidney shaped lever cap hole. (Patent 1933)</li>
    <li>Tall front knob (~2-1/2" Height)</li>
    <li>Brass adjustment knob has parallel knurling</li>
@@ -676,7 +678,7 @@
   <h2>Type 20</h2>
   <h3>1962 - 1967</h3>
   <p><ul>
-   <li>“Stanley” on lever cap.</li>
+   <li>"Stanley" on lever cap.</li>
    <li>Kidney shaped lever cap hole. (Patent 1933)</li>
    <li>Blue Paint on bed</li>
    <li>Tall front knob (~2-1/2" Height)</li>
@@ -689,7 +691,7 @@
   <h3>1968 - 19??</h3>
   <p><ul>
    <li>Most books and resources stop at 1968 but I am noting some things as a type 21</li>
-   <li>“Stanley” on lever cap.</li>
+   <li>"Stanley" on lever cap.</li>
    <li>Kidney shaped lever cap hole. (Patent 1933)</li>
    <li>Red Paint on bed</li>
    <li>Tall front knob (~2-1/2" Height)</li>
@@ -719,6 +721,59 @@
    <li>Leonard Bailey, Improvement in Spokeshaves, <a href="PDF/0055599.pdf" target="new">US-0055599-A</a>, 1866-06-19</li>
    <li>James M. Burdick, Clamping Lever for Planes, <a href="PDF/1812820.pdf" target="new">US-1812820-A</a>, 1931-06-30</li>
   </ul>
+ </article>
+ <article id="competitors">
+  <h3>Legacy Competitors</h3>
+  <p>There are competitors to Stanley Planes even today.</p>
+  <h4>Record</h4>
+  <p>Prior to around 1970 Record and Stanley planes are the same thing. Made under license or contract.</p>
+  <h4>Victor</h4>
+  <p>Leonard Bailey designed planes for Victor after Stanley bought his patents.</p>
+  <h4>Sargent</h4>
+  <p>TODO</p>
+  <h4>Millers Falls</h4>
+  <p></p>
+  <h4>Bedrock</h4>
+  <p>TODO</p>
+  <h4>Keen Kutter</h4>
+  <p>TODO</p>
+  <h4>Fulton</h4>
+  <p>TODO</p>
+  <h4>Craftsman</h4>
+  <p>TODO</p>
+  <h3>Modern Plane Makers</h3>
+  <h4>Bench Dog</h4>
+  <p>TODO</p>
+  <h4>Woodriver</h4>
+  <p>TODO</p>
+  <h4>Clifton</h4>
+  <p>TODO</p>
+  <h4>Ibex</h4>
+  <p>TODO</p>
+  <h4>Pinnacle</h4>
+  <p>TODO</p>
+  <h4>Kunz</h4>
+  <p>TODO</p>
+  <h4>Veritas</h4>
+  <p>TODO</p>
+  <h4>Lie-Nielsen</h4>
+  <p>TODO</p>
+  <h4>Hock</h4>
+  <p>TODO</p>
+  <h4>Buck Brothers(Bros.)</h4>
+  <p>TODO</p>
+  <h4>Jorgensen</h4>
+  <p>TODO</p>
+  <h4>Spear and Jackson</h4>
+  <p>Screw style cap and many other identical options under different names.</p>
+  <h4>Groz</h4>
+  <p>TODO</p>
+  <h4>Amazon Basics</h4>
+  <p>Yes there are Amazon Basics planes. I should compare and see who makes them.</p>
+  <h4>Taytools</h4>
+  <p>I noticed they have a router plane so I added them to the list.</p>
+  <h4>TODO</h4>
+  <p>TODO</p>
  </article>
  <article id="faq">
   <h3>Frequently Asked Questions (FAQ)</h3>
@@ -772,13 +827,14 @@
   <h2>Stanley Hand Plane Information and Identification</h2>
   <p>Do you need or want more information about Stanley hand planes? You are in the right place.</p>
   <a href="images/plane.png" target="new"><img src="images/plane.png" title="Diagram of plane parts." /></a>
+  <h3>Note the cast iron bottom of the plane is often called the "bed" in the industry.</h3>
   <p>Resources and Credits:<ul>
    <li>The Stanley Plane by Alvin Sellens 1975 Published by The Early American Industries Association ISBN 10: 0961206802 / ISBN 13: 9780961206802</li>
    <li>Stanley Tools Education Department Chart No. C115</li>
    <li>My extensive collection of vintage tools.</li>
    <li><a href="https://ppubs.uspto.gov/pubwebapp/static/pages/ppubsbasic.html" target="new">United States Patent and Trademark Office</a></li>
    <li>Patented Transitional Metallic Planes America by Roger Smith ISBN 10: 0940458004 / ISBN 13: 9780940458000 and Vol II ISBN 10: 0940458055 / ISBN 13: 9780940458055</li>
-   <li>https://www.plane-dealer.com/bailey-type-study</li>
+   <li><a href="https://www.plane-dealer.com/bailey-type-study" target="new">Plane Dealer</a></li>
   </ul></p>
  </article>
  </div>
